<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- Expanded View Power Widget -->
	<PreferenceCategory android:title="@string/general_title">
		<CheckBoxPreference android:key="expanded_widget"
			android:title="@string/title_expanded_widget" android:summary="@string/summary_expanded_widget"
			android:defaultValue="true" />
		<CheckBoxPreference android:key="expanded_hide_onchange"
			android:title="@string/title_expanded_hide_onchange" android:summary="@string/summary_expanded_hide_onchange"
			android:defaultValue="false" android:dependency="expanded_widget" />
		<CheckBoxPreference android:key="expanded_hide_indicator"
			android:title="@string/title_expanded_hide_indicator" android:summary="@string/summary_expanded_hide_indicator"
			android:defaultValue="false" android:dependency="expanded_widget" />
		<CheckBoxPreference android:key="expanded_hide_scrollbar"
			android:title="@string/title_expanded_hide_scrollbar" android:summary="@string/summary_expanded_hide_scrollbar"
			android:defaultValue="false" android:dependency="expanded_widget" />
		<ListPreference android:key="expanded_haptic_feedback"
			android:dialogTitle="@string/expanded_haptic_feedback_title" android:title="@string/expanded_haptic_feedback_title"
			android:summary="@string/expanded_haptic_feedback_summary" android:entries="@array/haptic_feedback_entries"
			android:entryValues="@array/haptic_feedback_values" />
		<Preference android:key="expanded_color_mask"
			android:title="@string/expanded_color_mask" android:summary="@string/expanded_color_mask"
			android:defaultValue="-1" android:dependency="expanded_widget" />
		<PreferenceScreen android:key="widget_picker"
			android:title="@string/title_widget_picker" android:summary="@string/summary_widget_picker"
				android:targetClass="com.cyanogenmod.settings.activities.PowerWidget$PowerWidgetChooser">
		</PreferenceScreen>
		<PreferenceScreen android:key="widget_order"
			android:title="@string/title_widget_order" android:summary="@string/summary_widget_order"
		        android:targetClass="com.cyanogenmod.settings.activities.PowerWidget$PowerWidgetOrder">
		</PreferenceScreen>
	</PreferenceCategory>

</PreferenceScreen>
